# raspylights

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  execute.sh  run.sh  rust-toolchain.toml
.cargo/: config.toml
backend/: Cargo.toml  execute.sh
backend/src/: main.rs  storage.rs  strip.rs
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  lib.rs  utils.rs
frontend/src/components/: applyform.rs  ball.rs  balls.rs  composite.rs  glow.rs  history.rs  mod.rs  preview.rs  rainbow.rs  selector.rs
frontend/static/: style.css
lights/: Cargo.toml
lights/src/: details.rs  error.rs  lib.rs
lights/src/effects/: '  mod.rs  rune.rs
lights/src/effects/rune/: types.rs
