[workspace]
members = [
    "lights",
    "backend",
    "frontend"
]
exclude = [
    "frontend-seed",
]
resolver = "2"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[workspace.dependencies]

palette = { version = "0.7.3", features = ["serializing"] }
itertools = "0.11.0"
serde_traitobject = "0.2.8"
serde = { version = "1.0.188", features = ["derive"] }
log = "0.4.20"
