[package]
name = "frontend"
version = "0.1.0"
authors = ["Kevin Oberlies <favilo@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Frontend for raspylights"
categories = ["hardware"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
wasm-bindgen-test = "0.3.24"

[dependencies]
lights = { path = "../lights" }
log = "0.4.14"
palette = { version = "0.6.0", features = ["serializing"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_traitobject = "0.2.7"
strum = { version = "0.21.0", features = ["derive"] }
wasm-bindgen = "0.2.74"
wasm-logger = "0.2.0"
web-sys = "0.3.51"
wee_alloc = { version = "0.4.5", optional = true }
yew = "0.18.0"
yew-mdc-widgets = { git = "https://github.com/noogen-projects/yew-mdc-widgets.git", branch = "master" }
# yew-mdc = { git = "https://github.com/dungeonfog/yew-mdc.git", branch = "master" }
serde_millis = "0.1.1"
serde_json = "1.0.64"
hex = "0.4.3"
anyhow = "1.0.42"
fxhash = "0.2.1"
console_error_panic_hook = "0.1.6"
yewtil = "0.4.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
debug = true
