[package]
name = "frontend"
version = "0.1.0"
authors = ["Kevin Oberlies <favilo@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Frontend for raspylights"
categories = ["hardware"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
wasm-bindgen-test = "0.3.24"

[dependencies]
anyhow = "1.0.42"
chrono = { version = "0.4.19", features = ["serde"] }
console_error_panic_hook = "0.1.6"
fxhash = "0.2.1"
gloo = "*"
hex = "0.4.3"
instant = {  version = "0.1.12", features = ["web-sys", "wasm-bindgen", "inaccurate"] }
lights = { path = "../lights" }
log = "0.4.14"
palette = { version = "0.6.0", features = ["serializing"] }
reqwasm = "0.2.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_millis = "0.1.1"
serde_traitobject = "0.2.7"
strum = { version = "0.21.0", features = ["derive"] }
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.28"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.55", features = ["CanvasRenderingContext2d", "HtmlCanvasElement"] }
wee_alloc = { version = "0.4.5", optional = true }
ybc = "0.2.1"
yew = "0.18.0"
yew-mdc-widgets = { git = "https://github.com/noogen-projects/yew-mdc-widgets.git", branch = "master" }
yewtil = "0.4.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
debug = true
