[package]
name = "frontend"
version = "0.1.0"
authors = ["Kevin Oberlies <favilo@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Frontend for raspylights"
categories = ["hardware"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
console_error_panic_hook = "0.1.7"
gloo = "0.10.0"
gloo-net = "0.4.0"
gloo-storage = "0.3.0"
gloo-timers = "0.3.0"
hex = "0.4.3"
instant = {  version = "0.1.12", features = ["web-sys", "wasm-bindgen", "inaccurate"] }
lights = { path = "../lights" }
log = { workspace = true }
palette = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.107"
serde_traitobject = { workspace = true }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.64", features = ["CanvasRenderingContext2d", "HtmlCanvasElement"] }
wee_alloc = { version = "0.4.5", optional = true }
ybc = { git = "https://github.com/favilo/ybc", branch = "master" }
yew = "0.21.0" 

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
debug = true

