[package]
name = "lights"
version = "0.1.0"
authors = ["Kevin Oberlies <favilo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dyn-clone = "1.0.4"
enum_dispatch = "0.3.7"
itertools = "0.10.1"
log = "0.4.14"
metatype = "0.2.1"
mopa = "0.2.2"
once_cell = "1.8.0"
palette = { version = "0.6.0", features = ["serializing"] }
rune = "0.9.1"
runestick = "0.9.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_traitobject = "0.2.7"
serde_with = {  version = "1.11.0", features = ["chrono"] }
thiserror = "1.0.26"
# wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
