[package]
name = "lights"
version = "0.1.0"
authors = ["Kevin Oberlies <favilo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
dyn-clone = "1.0.14"
enterpolation = "0.2.1"
enum_dispatch = "0.3.12"
itertools = { workspace = true }
log = { workspace = true }
metatype = "0.2.1"
mopa = "0.2.2"
once_cell = "1.18.0"
palette = { workspace = true }
rune = "0.13.1"
serde = { workspace = true }
serde_traitobject = { workspace = true }
serde_with = {  version = "3.3.0", features = ["chrono"] }
thiserror = "1.0.49"
# wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
